# TailTalk

./: Cargo.toml  README.md
TashTalkUSB/: .gitignore  TashTalkUSB-bottom-pos.csv  TashTalkUSB-top-pos.csv  TashTalkUSB.csv  TashTalkUSB.kicad_pcb  TashTalkUSB.kicad_prl  TashTalkUSB.kicad_pro  TashTalkUSB.kicad_sch  TashTalkUSB.xml  fp-info-cache  fp-lib-table  sym-lib-table  tashtalk.kicad_sym
TashTalkUSB/TashTalk.pretty/: CONN-TH_DIN-802.kicad_mod
examples/adsp-stylewriter/: Cargo.toml  main.rs
examples/aep-echo/: Cargo.toml  main.rs
examples/afp-server/: Cargo.toml  main.rs
examples/nbp-lookup/: Cargo.toml  main.rs
examples/pap-print/: Cargo.toml  main.rs
examples/tailtalk-gui/: Cargo.toml  main.rs
examples/tailtalk-gui/ui/: app.slint
tailtalk/: Cargo.toml
tailtalk-packets/: Cargo.toml
tailtalk-packets/src/: aarp.rs  adsp.rs  aep.rs  asp.rs  atp.rs  ddp.rs  ethertalk.rs  headers.rs  lib.rs  llap.rs  nbp.rs  pap.rs
tailtalk-packets/src/afp/: bitmap.rs  commands.rs  mod.rs  types.rs  util.rs
tailtalk/src/: addressing.rs  adsp.rs  asp.rs  atp.rs  ddp.rs  echo.rs  lib.rs  nbp.rs  pap.rs  stylewriter.rs
tailtalk/src/afp/: desktop.rs  mod.rs  server.rs  volume.rs
tailtalk/tests/: README.md  adsp_test.rs  asp_session_test.rs  asp_status_test.rs  client_exchange.rs  pap_test.rs
tashtalk/: Cargo.toml
tashtalk/src/: codec.rs  crc.rs  lib.rs
