[package]
name = "tailtalk-packets"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6"
byteorder = "1.5.0"
bytes = "1.6.0"
encoding_rs = "0.8.33"
thiserror = "1.0.58"
tracing = "0.1.43"

[dev-dependencies]
assert_hex = "0.4.1"
pretty_assertions = "1.4.1"
