[package]
name = "tailtalk"
version = "0.1.0"
edition = "2024"

[lib]
name = "tailtalk"
path = "src/lib.rs"

[dependencies]
dashmap = "6.1.0"
etherparse = "0.15"
flume = "0.11"
im = "15.1.0"
tailtalk-packets = { path = "../tailtalk-packets" }

tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7.12"
anyhow = "1.0.89"
sled = "0.34"
socket2 = "0.5.7"
rand = "0.8.5"
libc = "0.2.159"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bytes = "1"
xattr = "1.3.1"

[features]
ddp-native = []

[dev-dependencies]
tempfile = "3.13"
