[package]
name = "tashtalk"
version = "0.1.0"
edition = "2024"
description = "A client library for the TashTalk LocalTalk adapter"
repository = "https://github.com/feralfirmware/tailtalk"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.40", features = ["io-util"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
futures = "0.3"
bytes = "1"
tracing = "0.1"
thiserror = "1"
