[package]
name = "aep-echo-example"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "aep-echo"
path = "main.rs"

[dependencies]
tailtalk = { path = "../../tailtalk" }
tailtalk-packets = { path = "../../tailtalk-packets" }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
