[package]
name = "afp-server-example"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "afp-server"
path = "main.rs"

[dependencies]
tailtalk = { path = "../../tailtalk" }
tailtalk-packets = { path = "../../tailtalk-packets" }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.60", features = ["derive"] }
