[package]
name = "tailtalk-gui"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "tailtalk-gui"
path = "main.rs"

[dependencies]
anyhow = { workspace = true } #unified
if-addrs = "0.13"
rfd = "0.15"
serialport = "4"
slint = "1"
tailtalk = { workspace = true } #unified
tailtalk-packets = { workspace = true } #unified
tokio = { workspace = true, features = ["io-util"] } #unified
tracing = { workspace = true } #unified
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
slint-build = "1"
